[project]
name = "pensimpy"
version = "0.1.0"
description = "Fork of PenSimPy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tqdm>=4.67.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "gymnasium>=1.2.2",
]

[dependency-groups]
dev = ["ipykernel>=7.1.0"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pensimpy"
module-root = ""
include = ["pensimpy/**"]
exclude = ["examples/**"]
